# MiniProd_NLP3_VeryFastMoodEmotionClassification_T12_2025

./: .env.example  .gitignore  .sh  Dockerfile  README.md  check_gpu_processes.sh  docker-compose.yml  qwen2.5_docker-compose.yml  requirements.txt
CKP/: .sh  Dockerfile  docker-compose.yml  pyproject.toml
CKP/docs/: docs2.1.2_Prompting.md
CKP/src/api/: flask_simple_api.py  main.py  middleware.py
CKP/src/clients/: __init__.py  groq_client_async.py
CKP/src/core/: constants.py  exceptions.py
CKP/src/models/: enums.py  responses.py
CKP/src/prompts/: emotion_prompt.py
CKP/src/utils/: json_parser.py
CKP/tests/: __init__.py  conftest.py  test1.py
data/: celebrate_data.xlsx  data_all_rows_type1.xlsx  emotion_data.xlsx  example_curl.sh  utils_processing.py
data/celebrate_results/: celebrate_benchmark.py  celebrate_benchmark.xlsx  v0_.md
data/emotion_results/: emotion_benchmark.py
data/gen_grouth_truth_LLMs/: PromptTuning_OpenAI_v5_BatchSize_NumWorkers.py  _PromptTuning_OpenAI_v5_BatchSize_NumWorkers.md  output_data_v2.xlsx  requirements.txt  run.sh
data/prompting/: CHANGE_PROMPT.md  TuningPrompt.md
docs/: docs1.2 Bài toán Classification nhỏ hơn 150ms.md  docs2.1 Test 1 - Phi3.md  docs2.1.1_Implement1.md  docs2.1.1_outputOfPrompt.md  docs2.1.2_Implement2_sucessful.md  docs2.1_FolderStructure.md  docs_init_JSON_output.md  docs_init_TEXT_output_v2.md
src/: __init__.py  deploy_phi3_emotion_classification.sh  docs_run_phi3_.md  docs_run_v1_SmolLM2_server.md  run_v1_phi3_server.sh
src/api/: dependencies.py  routes.py
src/clients/: groq_client.py  (+1 more)
(+23 files in other folders)
